TicTacToe 2.0 - Now with Classes!
Broke the game up into classes (Players and Board). Gave it a loop and score counter so you can play again. Added color and now the screen clears after every move! Lastly, you can have two bots play against each other!

--- a/Extra - Tic Tac Toe/Extra - Tic Tac Toe/Extra - Tic Tac Toe.vcxproj
+++ b/Extra - Tic Tac Toe/Extra - Tic Tac Toe/Extra - Tic Tac Toe.vcxproj
@@ -127,7 +127,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AIPlayer.cpp" />
+    <ClCompile Include="Board.cpp" />
     <ClCompile Include="Extra - Tic Tac Toe.cpp" />
+    <ClCompile Include="HumanPlayer.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="AIPlayer.h" />
+    <ClInclude Include="Board.h" />
+    <ClInclude Include="HumanPlayer.h" />
+    <ClInclude Include="Player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
